# PeleLMeX

./: .buildinfo  .clang-tidy  .codespell-ignore-words  .codespellrc  .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  LMeXControls.html  Model.html  README.md  Troubleshooting.html  Validation.html  genindex.html  index.html  objects.inv  overview.html  search.html  searchindex.js
Docs/: CMakeLists.txt  Makefile  requirements.txt
Docs/landing/: gallery.html  help.html  index.html  overview.html
Docs/source/: LMeXControls.rst  Model.rst  Troubleshooting.rst  Validation.rst  conf.py  index.rst
Docs/source/landing/: gallery.html  help.html  index.html  overview.html
Docs/source/manual/: Implementation.rst  LMeXControls.rst  Model.rst  Performances.rst  Troubleshooting.rst  Tutorials.rst  Tutorials_BFSFlame.rst  Tutorials_FlameSheet.rst  Tutorials_FlowPastCyl.rst  Tutorials_HotBubble.rst  Tutorials_TripleFlame.rst  Validation.rst  conf.py  index.rst
Docs/sphinx/manual/: Implementation.rst  LMeXControls.rst  Model.rst  Performances.rst  Troubleshooting.rst  Tutorials.rst  Tutorials_BFSFlame.rst  Tutorials_FlameSheet.rst  Tutorials_FlowPastCyl.rst  Tutorials_HotBubble.rst  Tutorials_SettingUp.rst  Tutorials_TripleFlame.rst  Validation.rst  index.rst
Exec/RegTests/: CMakeLists.txt  README.md
Exec/RegTests/EB_BackwardStepFlame/: CMakeLists.txt  EBUserDefined.H  EBUserKernels.H  GNUmakefile  PeleLMeX_EBUserDefined.H  PeleLMeX_PatchFlowVariables.cpp  README.md  input.2d  input.2d_isoTBottom  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_EB.H  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H
Exec/RegTests/EB_ChallengeProblem/: EBUserDefined.H  GNUmakefile  input.3d-regt  input.3d-regt_Hypre  input.3d-regt_Simple  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_parm.H
Exec/RegTests/EB_DecayingODEQTY/: CMakeLists.txt  GNUmakefile  PeleLMeX_EBUserDefined.H  PeleLMeX_ProblemSpecificFunctions.H  PeleLMeX_ProblemSpecificFunctions.cpp  README.md  input.2d  input.convergence_0  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H  run_convergence_test.py
Exec/RegTests/EB_EnclosedFlame/: CMakeLists.txt  GNUmakefile  README.md  input.2d-regt  input.2d-regt_Hypre  input.3d-regt  pelelm_prob.H  pelelm_prob.cpp  pelelmex_prob.H  pelelmex_prob_parm.H
Exec/RegTests/EB_EnclosedVortex/: CMakeLists.txt  GNUmakefile  README.md  input.2d-regt  input.2d-regt_Hypre  input.2d-regt_incomp  input.3d-regt  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H
Exec/RegTests/EB_FlowPastCylinder/: CMakeLists.txt  EBUserDefined.H  GNUmakefile  PeleLMeX_EBUserDefined.H  README.md  input.2d-Re500  input.2d-regt  input.2d-regt_HypreMAC  input.2d-regt_HypreNodal  input.2d-regt_WallBump  input.2d-regt_isoT  input.3d-regt  input.3d-regtY  input.3d-regt_WallBump  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H
Exec/RegTests/EB_ODEQty/: CMakeLists.txt  GNUmakefile  PeleLMeX_ProblemSpecificFunctions.cpp  README.md  eb-odeqty-2d.inp  eb-odeqty-3d.inp  input.2d  input.convergence_0  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H  run_convergence_test.py
Exec/RegTests/EB_PipeFlow/: CMakeLists.txt  EBUserDefined.H  GNUmakefile  PeleLMeX_EBUserDefined.H  README.md  input.2d-regt  input.3d-Poiseuille  input.3d-channel_noEB  input.3d-regt  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp  pelelmex_prob_parm.H
Exec/RegTests/Efield/: GNUmakefile  input.2d-regt  pelelm_prob.H  pelelm_prob.cpp
Exec/RegTests/EnclosedFlame/: CMakeLists.txt  GNUmakefile  README.md  enclosedflame-2d.inp  enclosedflame-3d.inp  input.2d-regt  input.3d-regt  pelelm_prob.H  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp
Exec/RegTests/EnclosedInjection/: CMakeLists.txt  GNUmakefile  README.md  input  input.2d-regt  pelelm_prob.H  pelelm_prob.cpp  pelelm_prob_parm.H  pelelmex_prob.H  pelelmex_prob.cpp  (+1 more)
Source/: CMakeLists.txt  DeriveUserDefined.cpp  DiffusionOp.H  DiffusionOp.cpp  EBUserDefined.H  Make.package  PeleFlowControllerData.H  PeleLM.H  PeleLM.cpp  PeleLMAdvance.cpp  PeleLMAdvection.cpp  PeleLMBC.cpp  PeleLMBCfill.H  PeleLMBCfillEB.H  PeleLMData.cpp  PeleLMDerive.H  PeleLMDerive.cpp  PeleLMDeriveFunc.H  PeleLMDeriveFunc.cpp  PeleLMDiagnostics.cpp  PeleLMDiffusion.cpp  PeleLMEB.cpp  PeleLMEos.cpp  PeleLMEvaluate.cpp  PeleLMEvolve.cpp  PeleLMFlowController.cpp  PeleLMForces.cpp  PeleLMInit.cpp  PeleLMPlot.cpp  PeleLMProjection.cpp  PeleLMReactions.cpp  PeleLMRegrid.cpp  PeleLMSetup.cpp  PeleLMSoot.cpp  PeleLMSprayParticles.cpp  PeleLMTagging.cpp  PeleLMTemporals.cpp  PeleLMTimestep.cpp  PeleLMTransportProp.cpp  PeleLMUMac.cpp  (+57 more)
Source/Diagnostics/: CMakeLists.txt  DiagBase.H  DiagBase.cpp  DiagConditional.H  DiagConditional.cpp  DiagFramePlane.H  DiagFramePlane.cpp  DiagPDF.H  DiagPDF.cpp  Make.package
Source/Efield/: CMakeLists.txt  EOS_Extension.H  MLGMRES.H  MLGMRES.cpp  Make.package  PeleLMEF.H  PeleLMEFDeriveFunc.H  PeleLMEFDeriveFunc.cpp  PeleLMEFIonDrift.cpp  PeleLMEFNLSolve.cpp  PeleLMEFPoisson.cpp  PeleLMEFReactions.cpp  PeleLMEFTimeStep.cpp  PeleLMEFTransport.cpp  PeleLMEFUtils.cpp  PeleLMEF_Constants.H  PeleLMEF_K.H  PeleLMeX_EF.H  PeleLMeX_EFDeriveFunc.H  PeleLMeX_EFDeriveFunc.cpp  PeleLMeX_EFIonDrift.cpp  PeleLMeX_EFNLSolve.cpp  PeleLMeX_EFPoisson.cpp  PeleLMeX_EFReactions.cpp  PeleLMeX_EFTimeStep.cpp  PeleLMeX_EFTransport.cpp  PeleLMeX_EFUtils.cpp  PeleLMeX_EF_K.H  PeleLMeX_EOS_Extension.H
Source/Godunov/: Godunov.H  Make.package  godunov_advection_2D.cpp  godunov_advection_3D.cpp  godunov_ppm.cpp  godunov_predict_2D.cpp  godunov_predict_3D.cpp  incflo_godunov_fluxes_2D.cpp  incflo_godunov_fluxes_3D.cpp  incflo_godunov_predict_2D.cpp  incflo_godunov_predict_3D.cpp
Source/Radiation/: Make.package  PeleLMRad.cpp
Source/Soot/: CMakeLists.txt  Make.package  PeleLMSoot.cpp
Source/Spray/: CMakeLists.txt  Make.package  PeleLMSprayParticles.cpp
(+474 files in other folders)
