if(PELELMEX_ENABLE_EB)
  add_subdirectory(EB_BackwardStepFlame)
  add_subdirectory(EB_EnclosedFlame)
  add_subdirectory(EB_EnclosedVortex)
  add_subdirectory(EB_FlowPastCylinder)
  if(PELELMEX_DIM EQUAL 3)
    add_subdirectory(EB_PipeFlow)
  endif()
else()
  if(PELELMEX_ENABLE_RADIATION)
    add_subdirectory(SootRadTest)
  endif()
  add_subdirectory(EnclosedFlame)
  add_subdirectory(EnclosedInjection)
  add_subdirectory(FlameSheet)
  add_subdirectory(HITDecay)
  add_subdirectory(HotBubble)
  add_subdirectory(PeriodicCases)
  #add_subdirectory(SprayTest)
  add_subdirectory(TaylorGreen)
  if(PELELMEX_DIM EQUAL 2)
    add_subdirectory(TripleFlame)
  endif()
  if(PELELMEX_DIM EQUAL 3)
    add_subdirectory(TurbInflow)
  endif()
  #add_subdirectory(Unit)
endif()
