if(PELE_ENABLE_EB)
  add_subdirectory(EB_BackwardStepFlame)
  add_subdirectory(EB_EnclosedFlame)
  add_subdirectory(EB_EnclosedVortex)
  add_subdirectory(EB_FlowPastCylinder)
  add_subdirectory(EB_ODEQty)
  if(PELE_DIM EQUAL 3)
    add_subdirectory(EB_PipeFlow)
  endif()
else()
  add_subdirectory(EnclosedFlame)
  add_subdirectory(EnclosedInjection)
  add_subdirectory(FlameSheet)
  add_subdirectory(HITDecay)
  add_subdirectory(HotBubble)
  add_subdirectory(PeriodicCases)
  add_subdirectory(TaylorGreen)
  add_subdirectory(SootRadTest)
  if(PELE_ENABLE_PARTICLES)
    add_subdirectory(SprayTest)
  endif()
  if(PELE_DIM EQUAL 2)
    add_subdirectory(TripleFlame)
  endif()
  if(PELE_DIM EQUAL 3)
    add_subdirectory(TurbInflow)
  endif()
endif()
